infra/deploy/efs.tf
################################
# efs for media storage #######
################################

resource "aws_security_group" "efs" {
  name   = "${local.prefix}-media"
  vpc_id = aws_vpc.main.id
  ingress {
    from_port       = 2049
    to_port         = 2049
    protocol        = "tcp"
    security_groups = [aws_security_group.ecs_service.id]
  }
}


resource "aws_efs_file_system" "media" {
  encrypted = true
  tags = {
    Name = "${local.prefix}-media"
  }

}
